ADD: About hmtl, css and img

--- a/about.html
+++ b/about.html
@@ -13,17 +13,29 @@
   <header class="header">
     <div class="container-lg">
       <nav class="navbar">
+        <input type="checkbox" id="menu-mobile">
         <a href="index.html" class="header__logo text-decoration-none">
           <h1 class="head-md semibold">Olenka Sanchez</h1>
+          <div>
+            <!-- option 1 -->
+            <label for="menu-mobile" id= "toggle-close">
+              <i class="ri-close-line ri-xl"></i>
+            </label>
+            
+            <!-- option 2 -->
+            <label for="menu-mobile" id= "toggle-open">
+              <i class="ri-menu-line ri-xl"></i>
+            </label>
+          </div>
         </a>
-        <ul class="navbar__links list-style-none">
+        <ul class=" expandable navbar__links list-style-none">
           <li><a href="article.html" class="link text semibold">Articles</a></li>
           <li>
             <a href="#" class="link text semibold">Portafolio</a>
           </li>
           <li><a href="about.html" class="link text semibold">About</a></li>
           <li>
-            <a href="#" class="button button--primary button--sm text-decoration-none">
+            <a href="form.html" class="button button--primary button--sm text-decoration-none">
               Contact Me
             </a>
           </li>
@@ -132,7 +144,7 @@
 
         <div class="about-hobbies__card">
           <figure>
-            <img src="/codeable-ui---blog-post-Olesa0896/assets/pics/image 4.png" alt="pizza" />
+            <img src="/assets/pics/image 4.png" alt="pizza" />
           </figure>
         </div>
         <div class="about-hobbies__card">
@@ -146,7 +158,7 @@
         </div>
         <div class="about-hobbies__card">
           <figure>
-            <img src="/codeable-ui---blog-post-Olesa0896/assets/pics/hamburguesa.png" alt="hamburguesa" />
+            <img src="/assets/pics/hamburguesa.png" alt="hamburguesa" />
           </figure>
         </div>
         <div class="about-hobbies__card">
@@ -160,12 +172,12 @@
         </div>
         <div class="about-hobbies__card">
           <figure>
-            <img src="/codeable-ui---blog-post-Olesa0896/assets/pics/glacial.png" alt="glacial" />
+            <img src="/assets/pics/glacial.png" alt="glacial" />
           </figure>
         </div>
         <div class="about-hobbies__card">
           <figure>
-            <img src="/codeable-ui---blog-post-Olesa0896/assets/pics/templo.png" alt="templo" />
+            <img src="/assets/pics/templo.png" alt="templo" />
           </figure>
         </div>
 
