UPDATE: headers with accordingly links

--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
           </div>
         </a>
         <ul class=" expandable navbar__links list-style-none">
-          <li><a href="article.html" class="link text semibold">Articles</a></li>
+          <li><a href="/Blog_HTML_CSS/article.html" class="link text semibold">Articles</a></li>
           <li>
-            <a href="#" class="link text semibold">Portafolio</a>
+            <a href="/Blog_HTML_CSS/porfile.html" class="link text semibold">Portafolio</a>
           </li>
-          <li><a href="about.html" class="link text semibold">About</a></li>
+          <li><a href="/Blog_HTML_CSS/about.html" class="link text semibold">About</a></li>
           <li>
-            <a href="form.html" class="button button--primary button--sm text-decoration-none">
+            <a href="/Blog_HTML_CSS/input.html" class="button button--primary button--sm text-decoration-none">
               Contact Me
             </a>
           </li>
@@ -144,7 +144,7 @@
 
         <div class="about-hobbies__card">
           <figure>
-            <img src="/assets/pics/image 4.png" alt="pizza" />
+            <img src="/Blog_HTML_CSS/assets/pics/image 4.png" alt="pizza" />
           </figure>
         </div>
         <div class="about-hobbies__card">
@@ -158,7 +158,7 @@
         </div>
         <div class="about-hobbies__card">
           <figure>
-            <img src="/assets/pics/hamburguesa.png" alt="hamburguesa" />
+            <img src="/Blog_HTML_CSS/assets/pics/hamburguesa.png" alt="hamburguesa" />
           </figure>
         </div>
         <div class="about-hobbies__card">
@@ -172,12 +172,12 @@
         </div>
         <div class="about-hobbies__card">
           <figure>
-            <img src="/assets/pics/glacial.png" alt="glacial" />
+            <img src="/Blog_HTML_CSS/assets/pics/glacial.png" alt="glacial" />
           </figure>
         </div>
         <div class="about-hobbies__card">
           <figure>
-            <img src="/assets/pics/templo.png" alt="templo" />
+            <img src="/Blog_HTML_CSS/assets/pics/templo.png" alt="templo" />
           </figure>
         </div>
 
