--- a/article.html
+++ b/article.html
@@ -27,13 +27,13 @@
             </div>
           </a>
           <ul class=" expandable navbar__links list-style-none">
-            <li><a href="article.html" class="link text semibold">Articles</a></li>
+            <li><a href="/Blog_HTML_CSS/article.html" class="link text semibold">Articles</a></li>
             <li>
-              <a href="#" class="link text semibold">Portafolio</a>
+              <a href="/Blog_HTML_CSS/porfile.html" class="link text semibold">Portafolio</a>
             </li>
-            <li><a href="about.html" class="link text semibold">About</a></li>
+            <li><a href="/Blog_HTML_CSS/about.html" class="link text semibold">About</a></li>
             <li>
-              <a href="form.html" class="button button--primary button--sm text-decoration-none">
+              <a href="/Blog_HTML_CSS/input.html" class="button button--primary button--sm text-decoration-none">
                 Contact Me
               </a>
             </li>
