UPDATE: link portafolio with calencli page

--- a/porfile.html
+++ b/porfile.html
@@ -61,7 +61,9 @@
                 <svg><use xlink:href="#ruby"></svg>
                 <svg><use xlink:href="#github"></svg> -->
             </div>
-            <img src="/Blog_HTML_CSS/assets/icons/aaaarrrrow.svg" alt="">
+            <a href="/Blog_HTML_CSS/calenCli.html">
+              <img src="/Blog_HTML_CSS/assets/icons/aaaarrrrow.svg" alt="">
+            </a>
           </div>
           <div class="portafolio__card-text">
             <h3 class="head-xs semibold">CalenCLI</h3>
