UPDATE: links with portafolio

--- a/porfile.html
+++ b/porfile.html
@@ -98,7 +98,9 @@
                 <svg><use xlink:href="#ruby"></svg>
                 <svg><use xlink:href="#github"></svg> -->
             </div>
-            <img src="/Blog_HTML_CSS/assets/icons/aaaarrrrow.svg" alt="">
+            <a href="/Blog_HTML_CSS/pokemon-ruby.html">
+              <img src="/Blog_HTML_CSS/assets/icons/aaaarrrrow.svg" alt="">
+            </a>
           </div>
           <div class="portafolio__card-text">
             <h3 class="head-xs semibold">Pokemon Ruby</h3>
@@ -133,7 +135,9 @@
                 <svg><use xlink:href="#ruby"></svg>
                 <svg><use xlink:href="#github"></svg> -->
             </div>
-            <img src="/Blog_HTML_CSS/assets/icons/aaaarrrrow.svg" alt="">
+            <a href="/Blog_HTML_CSS/clinboards.html">
+              <img src="/Blog_HTML_CSS/assets/icons/aaaarrrrow.svg" alt="">
+            </a>
           </div>
           <div class="portafolio__card-text">
             <h3 class="head-xs semibold">CLIn Boards</h3>
@@ -168,7 +172,9 @@
                 <svg><use xlink:href="#ruby"></svg>
                 <svg><use xlink:href="#github"></svg> -->
             </div>
-            <img src="/Blog_HTML_CSS/assets/icons/aaaarrrrow.svg" alt="">
+            <a href="/Blog_HTML_CSS/expensable.html">
+              <img src="/Blog_HTML_CSS/assets/icons/aaaarrrrow.svg" alt="">
+            </a>
           </div>
           <div class="portafolio__card-text">
             <h3 class="head-xs semibold">Expensable CLI</h3>
