CHORE: add missing style

--- a/input.html
+++ b/input.html
@@ -45,7 +45,7 @@
   </header>
 
   <section class="container-lg">
-    <div class="container-md form-header">
+    <div class="container-md input__header">
       <h2 class="head-lg semibold">Contact me</h2>
       <p class="text-lg light">
         Looking to expand your team? Or do you need a web developer for a specific project? If I can help you in any way
