--- a/calenCli.html
+++ b/calenCli.html
@@ -14,16 +14,16 @@
     <div class="container-lg">
       <nav class="navbar">
         <input type="checkbox" id="menu-mobile">
-        <a href="index.html" class="header__logo text-decoration-none">
+        <a href="/Blog_HTML_CSS/index.html" class="header__logo text-decoration-none">
           <h1 class="head-md semibold">Olenka Sanchez</h1>
           <div>
             <!-- option 1 -->
-            <label for="menu-mobile" id="toggle-close">
+            <label for="menu-mobile" id= "toggle-close">
               <i class="ri-close-line ri-xl"></i>
             </label>
-
+            
             <!-- option 2 -->
-            <label for="menu-mobile" id="toggle-open">
+            <label for="menu-mobile" id= "toggle-open">
               <i class="ri-menu-line ri-xl"></i>
             </label>
           </div>
