--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container-lg">
         <nav class="navbar">
           <input type="checkbox" id="menu-mobile">
-          <a href="index.html" class="header__logo text-decoration-none">
+          <a href="/Blog_HTML_CSS/index.html" class="header__logo text-decoration-none">
             <h1 class="head-md semibold">Olenka Sanchez</h1>
             <div>
               <!-- option 1 -->
