--- a/porfile.html
+++ b/porfile.html
@@ -14,28 +14,28 @@
     <div class="container-lg">
       <nav class="navbar">
         <input type="checkbox" id="menu-mobile">
-        <a href="index.html" class="header__logo text-decoration-none">
+        <a href="/Blog_HTML_CSS/index.html" class="header__logo text-decoration-none">
           <h1 class="head-md semibold">Olenka Sanchez</h1>
           <div>
             <!-- option 1 -->
-            <label for="menu-mobile" id="toggle-close">
+            <label for="menu-mobile" id= "toggle-close">
               <i class="ri-close-line ri-xl"></i>
             </label>
-
+            
             <!-- option 2 -->
-            <label for="menu-mobile" id="toggle-open">
+            <label for="menu-mobile" id= "toggle-open">
               <i class="ri-menu-line ri-xl"></i>
             </label>
           </div>
         </a>
         <ul class=" expandable navbar__links list-style-none">
-          <li><a href="article.html" class="link text semibold">Articles</a></li>
+          <li><a href="/Blog_HTML_CSS/article.html" class="link text semibold">Articles</a></li>
           <li>
-            <a href="#" class="link text semibold">Portafolio</a>
+            <a href="/Blog_HTML_CSS/porfile.html" class="link text semibold">Portafolio</a>
           </li>
-          <li><a href="about.html" class="link text semibold">About</a></li>
+          <li><a href="/Blog_HTML_CSS/about.html" class="link text semibold">About</a></li>
           <li>
-            <a href="form.html" class="button button--primary button--sm text-decoration-none">
+            <a href="/Blog_HTML_CSS/input.html" class="button button--primary button--sm text-decoration-none">
               Contact Me
             </a>
           </li>
